--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Data files (too large for git)
 data/*.csv
 *.parquet
+docs/
 
 # Model artifacts (regenerable, too large)
 artifacts/*.index
